--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,18 @@
   }
 }
 
+
 .App-header {
-  background-color: #282c34;
+  background-image: url(./Photo/soccer.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .App-link {
